--- a/final project.Rmd
+++ b/final project.Rmd
@@ -15,6 +15,7 @@ The Data Analytics group from Good Health Corporation are interested in improvin
 library(tidyverse)
 library(readxl)
 library(dplyr)
+library(DT)
 ```
 
 #load data set
@@ -37,6 +38,15 @@ ghproject %>%
   distinct(VisitID) %>% 
   count()
 
+```
+There are 3682 records from 3612 patients
 
+```{r remove duplicated patients}
+n_occur <- data.frame(table(ghproject$PatientID))
+#check the duplicated patients
+revisit_patient <- ghproject[ghproject$PatientID %in% n_occur$Var1[n_occur$Freq > 1],]
+
+#remove duplicated patients
+ghproject_remove <- ghproject[!duplicated(ghproject[c('PatientID')]),]
 ```
 
