--- a/final project.Rmd
+++ b/final project.Rmd
@@ -16,15 +16,17 @@ library(tidyverse)
 library(readxl)
 library(dplyr)
 library(DT)
+library(janitor)
 ```
 
 #load data set
 ```{r}
-ghproject <- read_excel("GHProject_Dataset.xlsx")
+ghproject <- read_excel("GHProject_Dataset.xlsx") %>% 
+  clean_names()
 
 #summary of continuous variable
 ghproject %>% 
-  select(LOSDays2, Evisit, AgeYear, BMI:FacilityZip) %>% 
+  select(losdays2, evisit, ageyear, bmi:facilityzip) %>% 
   summary() %>% 
   na.omit() %>% 
   knitr::kable()
@@ -35,22 +37,28 @@ ghproject %>%
 
 #summary of PatientID and VisitID
 ghproject %>% 
-  distinct(PatientID) %>% 
+  distinct(patientid) %>% 
   count()
 
 ghproject %>% 
-  distinct(VisitID) %>% 
+  distinct(visitid) %>% 
   count()
 
 ```
 There are 3682 records from 3612 patients
 
 ```{r remove duplicated patients}
-n_occur <- data.frame(table(ghproject$PatientID))
+n_occur <- data.frame(table(ghproject$patientid))
 #check the duplicated patients
-revisit_patient <- ghproject[ghproject$PatientID %in% n_occur$Var1[n_occur$Freq > 1],]
+revisit_patient <- ghproject[ghproject$patientid %in% n_occur$Var1[n_occur$Freq > 1],]
 
 #remove duplicated patients
-ghproject_remove <- ghproject[!duplicated(ghproject[c('PatientID')]),]
+ghproject_remove <- ghproject[!duplicated(ghproject[c('patientid')]),]
+
+##recode gender
+ghproject_tidy <- ghproject_remove %>% 
+  mutate(gender = ifelse(gender == "Male", "1","0" )) %>% 
+  mutate(maritalstatus = ifelse(maritalstatus == "Married","1","0")) 
+
 ```
 
