--- a/final project.Rmd
+++ b/final project.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Final_project_bm"
-author: "Manqi Cai"
+title: "Biostatistics Methods 1 Final Project"
+author: "Manqi Cai, Yixi Xu, Peng-Lin Lin, Kaitlin Maciejewski"
 date: "12/9/2017"
-output: html_document
+output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
