--- a/final project.Rmd
+++ b/final project.Rmd
@@ -71,6 +71,23 @@ ghproject_tidy <- ghproject_remove %>%
                                 "Private" = "1",
                                 "Medicare" = "2",
                                 "Medicaid" = "2"),
+         mews = recode(mews,
+                       "NA" = "0",
+                       "0" = "1",
+                       "1" = "1",
+                       "2" = "2",
+                       "3" = "2",
+                       "4" = "3",
+                       "5" = "3",
+                       "6"= "4",
+                       "7"= "4",
+                       "8"= "4",
+                       "9"= "4",
+                       "10"= "4",
+                       "11"= "4",
+                       "12"= "4",
+                       "13"= "4",
+                       "14" = "4"),
          religion = ifelse(religion == "No Affiliation", "0", "1"),
          losdays2_log = log(losdays2),
          id = 1:nrow(ghproject_remove)) %>% 
