--- a/final project.Rmd
+++ b/final project.Rmd
@@ -210,3 +210,33 @@ par(mfrow=c(2,2))
 plot(reg)
 ```
 
+```{r}
+library(boot)     
+# For cv.glm()
+
+##bootstrap
+set.seed(1)
+
+# Our usual regression, no bootstrap yet
+boot.fn<-function(data, index){
+	return(coef(lm(losdays2_log ~ + is30dayreadmit + ageyear + month + cindex + evisit + ageyear + gender + religion + maritalstatus + insurancetype + bpsystolic + o2sat + heartrate +  respirationrate + bpdiastolic,data=ghproject_tidy,subset=index)))
+}
+boot.fn(ghproject_tidy,1:2709)
+
+# Compute the estimates by sampling with replacement
+# Sample chooses 392 observations from 392, with replacement
+# Might have duplicates
+set.seed(1)
+
+# One draw
+boot.fn(ghproject_tidy,sample(2709,2709,replace=T))
+
+# Use function boot() to repeat the sampling 10000 times.
+# Repeat 10000 times to get the estimates, SEs ad bias
+
+boot(ghproject_tidy, boot.fn, 1000)
+
+# How does it compare to the original (non-bootstrap) estimates?
+summary(reg)
+```
+
