--- a/final project.Rmd
+++ b/final project.Rmd
@@ -31,13 +31,33 @@ ghproject <- read_excel("GHProject_Dataset.xlsx") %>%
 
 #summary of continuous variable
 ghproject %>% 
-  select(losdays2, ageyear, bmi:bpdiastolic) %>% 
+  select(loshours,losdays2, ageyear, bmi:bpdiastolic) %>% 
   summary() %>% 
-  na.omit() %>% 
   knitr::kable()
 
+attach(ghproject)
+
+sd(loshours)
+
+sd(losdays2)
+
+sd(ageyear)
+
+sd(bmi)
+
+sd(bpdiastolic)
+
+sd(o2sat)
+
+sd(temperature)
+
+sd(heartrate)
+
+sd(respirationrate)
+
+sd(bpsystolic)
+
 #summary of categorical data
-##### NEEDS TO BE DONE #####
 ghproject %>% 
   group_by(mews) %>% 
   summarize(n())
@@ -180,10 +200,10 @@ hist(losdays2_log)
 hist(ageyear)
 #hist(bmi)
 hist(bpsystolic)
-hist(log(o2sat))
+hist(o2sat)
 #hist(temperature)
-hist(log(heartrate))
-hist(log(respirationrate))
+hist(heartrate)
+hist(respirationrate)
 hist(bpdiastolic)
 ```
 
@@ -276,7 +296,7 @@ summary(reg_bpd)
 ```
 
 ```{r full_linear_model}
-reg <- lm(losdays2_log ~ is30dayreadmit + ageyear +  cindex + evisit + insurancetype + bpsystolic + o2sat + heartrate +  respirationrate, ghproject_tidy)
+reg <- lm(losdays2_log ~ is30dayreadmit + ageyear +  cindex  + insurancetype + bpsystolic + o2sat + heartrate +  respirationrate, ghproject_tidy)
 
 summary(reg)
 
