--- a/BS1Final.Rmd
+++ b/BS1Final.Rmd
@@ -352,6 +352,25 @@ plot(reg_no_outliers)
 ```
 
 ```{r, include=F}
+set.seed(1)
+##boostrap method
+# load the library
+library(caret)
+# define training control
+train_control <- trainControl(method="boot", number=1000)
+# fix the parameters of the algorithm
+grid <- expand.grid(.fL=c(0), .usekernel=c(FALSE))
+# train the model
+model <- train(losdays2_log ~ + is30dayreadmit + ageyear + cindex + evisit + gender + maritalstatus + insurancetype + bpsystolic + o2sat + heartrate +  respirationrate + bpdiastolic, data=data_no_outliers, trControl=train_control, method='lm')
+# summarize results
+print(model)
+```
+
+The MSE we get from bootstrap model is 0.7430972, and MSE in our model is 0.7458, the difference between these two MSE is about 0.8%, which is a lot less than the threshold 10%. Therefore, after model validation, we think our model is reasonalbe for predict LOS. 
+
+```{r}
+set.seed(1)
+##cross-validation method
 # load the library
 library(caret)
 # define training control
@@ -364,7 +383,4 @@ model <- train(losdays2_log ~ + is30dayreadmit + ageyear + cindex + evisit + gen
 print(model)
 ```
 
-The MSE we get from bootstrap model is 0.7401364, and MSE in our model is 0.7458, the difference between these two MSE is about 0.8%, which is a lot less than the threshold 10%. Therefore, after model validation, we think our model is reasonalbe for predict LOS. 
-
-(i don't think the code above is bootstrapping)
 
